# solt

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  flatc
messages/cpp/: Monster_generated.h  RootTest_generated.h  Vec3_generated.h
messages/schema/: RootTest.fbs
messages/schema/MyNameSpace/: Monster.fbs
messages/schema/primitives/: Vec3.fbs
src/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  main.cpp  messages
src/testClient/: CMakeLists.txt  main.cpp
